Prevent background from causing unexpected scrolling on mobile

--- a/dwst/dwst.css
+++ b/dwst/dwst.css
@@ -167,6 +167,7 @@ body
   bottom: 24pt;
   background-color: #030303;
   width: 100ch;
+  max-width: 100%;
 }
 
 #screen1
